# ESP32-C3_Screen_Test

./: .gitignore  AUDIT_REPORT.md  CMakeLists.txt  INTEGRATION_GUIDE.md  PROJECT_STATE.md  README.md  SPEC.md  STAGE_5_READY.txt  sdkconfig.defaults
components/waveshare__esp_lcd_st7735/: PATCHES.txt  esp_lcd_st7735.c
docs/: PR_phase1_refactoring_serial_guided_panelhw.md  PR_phase2_serial_ux.md  PR_phase5_i2c_oled.md  PR_phase6_geometry.md  architecture_review.md  managed_lcd_drivers.md  plan_g5_alignment_pattern.md  plan_spi_try_sequence_subtests.md  senior_architecture_review_briefing.md  senior_review_junior_firmware_console.md  ux_serial_flow_plan.md
docs/hardware/: README.md
main/: CMakeLists.txt  app_main.c  appshell.c  appshell.h  board_pins.h  console_dashboard.c  console_dashboard.h  console_text.c  console_text.h  display_recovery.c  display_recovery.h  display_stages.h  font5x7_space_to_z.inc  guided_flow.c  guided_flow.h  guided_ui_strings.c  guided_ui_strings.h  hookup_print.c  hookup_print.h  identity.c  identity.h  idf_component.yml  panel_assets.c  panel_assets.h  panel_hw.c  panel_hw.h  panel_hw_link.h  panel_probes.c  panel_probes.h  provision_print.c  provision_print.h  safe_idle.c  safe_idle.h  serial_menu.c  serial_menu.h  session.c  session.h  spi_presets.c  spi_presets.h  stage_2_orientation.c  (+8 more)
scripts/: patch_waveshare_st7735_esp_idf6.ps1
tools/: gen_brand_turnip.py
